crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__gt.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"1 > 2\").unwrap()"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Gt(
                            (
                                Number(
                                    (
                                        1.0,
                                        0..1,
                                    ),
                                ),
                                0..1,
                            ),
                            (
                                Number(
                                    (
                                        2.0,
                                        4..5,
                                    ),
                                ),
                                4..5,
                            ),
                        ),
                        0..5,
                    ),
                ),
                0..5,
            ),
        ),
        0..5,
    ),
]
