crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__if_chain.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"\n        if {\n            2 == 3 {\n                echo 10\n            }\n            true: echo 10\n            else {\n                echo 20\n            }\n        }\n    \"))"
---
[
    (
        Statement(
            (
                IfChain(
                    (
                        "if",
                        9..11,
                    ),
                    [
                        (
                            IfCondition(
                                (
                                    IfCondition(
                                        (
                                            Eq(
                                                (
                                                    Number(
                                                        (
                                                            2.0,
                                                            26..27,
                                                        ),
                                                    ),
                                                    26..27,
                                                ),
                                                (
                                                    Number(
                                                        (
                                                            3.0,
                                                            31..32,
                                                        ),
                                                    ),
                                                    31..32,
                                                ),
                                            ),
                                            26..32,
                                        ),
                                        (
                                            Block(
                                                [],
                                                [
                                                    (
                                                        Echo(
                                                            (
                                                                "echo",
                                                                51..55,
                                                            ),
                                                            (
                                                                Number(
                                                                    (
                                                                        10.0,
                                                                        56..58,
                                                                    ),
                                                                ),
                                                                56..58,
                                                            ),
                                                        ),
                                                        51..58,
                                                    ),
                                                ],
                                            ),
                                            33..72,
                                        ),
                                    ),
                                    26..72,
                                ),
                            ),
                            26..72,
                        ),
                        (
                            IfCondition(
                                (
                                    InlineIfCondition(
                                        (
                                            Boolean(
                                                (
                                                    true,
                                                    85..89,
                                                ),
                                            ),
                                            85..89,
                                        ),
                                        (
                                            Echo(
                                                (
                                                    "echo",
                                                    91..95,
                                                ),
                                                (
                                                    Number(
                                                        (
                                                            10.0,
                                                            96..98,
                                                        ),
                                                    ),
                                                    96..98,
                                                ),
                                            ),
                                            91..98,
                                        ),
                                    ),
                                    85..98,
                                ),
                            ),
                            85..98,
                        ),
                        (
                            Else(
                                (
                                    Else(
                                        (
                                            "else",
                                            111..115,
                                        ),
                                        (
                                            Block(
                                                [],
                                                [
                                                    (
                                                        Echo(
                                                            (
                                                                "echo",
                                                                134..138,
                                                            ),
                                                            (
                                                                Number(
                                                                    (
                                                                        20.0,
                                                                        139..141,
                                                                    ),
                                                                ),
                                                                139..141,
                                                            ),
                                                        ),
                                                        134..141,
                                                    ),
                                                ],
                                            ),
                                            116..155,
                                        ),
                                    ),
                                    111..155,
                                ),
                            ),
                            111..155,
                        ),
                    ],
                ),
                9..165,
            ),
        ),
        9..165,
    ),
]
