crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__if_condition-5.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"\n        if true: echo 10\n        else: echo 20\n    \"))"
---
[
    (
        Statement(
            (
                IfCondition(
                    (
                        "if",
                        9..11,
                    ),
                    (
                        InlineIfCondition(
                            (
                                Boolean(
                                    (
                                        true,
                                        12..16,
                                    ),
                                ),
                                12..16,
                            ),
                            (
                                Echo(
                                    (
                                        "echo",
                                        18..22,
                                    ),
                                    (
                                        Number(
                                            (
                                                10.0,
                                                23..25,
                                            ),
                                        ),
                                        23..25,
                                    ),
                                ),
                                18..25,
                            ),
                        ),
                        12..25,
                    ),
                    [],
                    Some(
                        (
                            InlineElse(
                                (
                                    "else",
                                    34..38,
                                ),
                                (
                                    Echo(
                                        (
                                            "echo",
                                            40..44,
                                        ),
                                        (
                                            Number(
                                                (
                                                    20.0,
                                                    45..47,
                                                ),
                                            ),
                                            45..47,
                                        ),
                                    ),
                                    40..47,
                                ),
                            ),
                            34..47,
                        ),
                    ),
                ),
                9..47,
            ),
        ),
        9..47,
    ),
]
