crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__if_condition-6.snap
---
source: tests/grammar/alpha034.rs
expression: "semantic_tokens_from_ast(parse(&tokenize(r#\"\nfun bar(a: Text) {\n    if true {\n    }\n}\n    \"#)).0.as_ref())"
---
[
    (
        5,
        1..4,
    ),
    (
        0,
        5..8,
    ),
    (
        7,
        9..10,
    ),
    (
        8,
        12..16,
    ),
    (
        5,
        24..26,
    ),
    (
        12,
        27..31,
    ),
]
