crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__import-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"import {} from \\\"path/to/module\\\"\"))"
---
[
    (
        Import(
            (
                false,
                0..6,
            ),
            (
                "import",
                0..6,
            ),
            (
                ImportSpecific(
                    [],
                ),
                7..9,
            ),
            (
                "from",
                10..14,
            ),
            (
                "path/to/module",
                15..31,
            ),
        ),
        0..31,
    ),
]
